# gsca-backend

./: .gitignore  Cargo.toml  Dockerfile  README.md
migrations/2023-10-13-204814_user/: up.sql
migrations/2023-10-13-204828_prof_class/: up.sql
migrations/2023-10-13-204835_class/: down.sql  up.sql
migrations/2023-10-13-204903_class_time/: down.sql  up.sql
migrations/2023-10-13-204908_reg/: down.sql
migrations/2023-10-13-204919_class_student/: down.sql  up.sql
migrations/2023-10-13-204926_student/: up.sql
migrations/2023-10-13-204927_class_student/: up.sql
migrations/2023-10-13-204990_reg/: up.sql
migrations/2023-10-13-205000_prof_class/: down.sql  up.sql
src/: auth.rs  main.rs  routes.rs
src/database/: actions.rs  mod.rs  models.rs  schema.rs
