[package]
name = "gsca"
version = "0.1.0"
authors = ["ashandme <ash@ashlandia.me>"]
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2.9"
jsonwebtoken = "8"
diesel = { version = "2", features = ["mysql", "r2d2"] }
dotenv = "0.15"
serde = "1.0"
serde_json = "1.0"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4", "fast-rng"] }
env_logger = "0.10"
log = "0.4"